; ModuleID = '/home/carl/AnghaBench/postgres/src/port/extr_erand48.c_pg_srand48.c'
source_filename = "/home/carl/AnghaBench/postgres/src/port/extr_erand48.c_pg_srand48.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RAND48_SEED_0 = common dso_local global i16 0, align 2
@_rand48_seed = common dso_local global i16* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pg_srand48(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i16, i16* @RAND48_SEED_0, align 2
  %4 = load i16*, i16** @_rand48_seed, align 8
  %5 = getelementptr inbounds i16, i16* %4, i64 0
  store i16 %3, i16* %5, align 2
  %6 = load i64, i64* %2, align 8
  %7 = trunc i64 %6 to i16
  %8 = load i16*, i16** @_rand48_seed, align 8
  %9 = getelementptr inbounds i16, i16* %8, i64 1
  store i16 %7, i16* %9, align 2
  %10 = load i64, i64* %2, align 8
  %11 = ashr i64 %10, 16
  %12 = trunc i64 %11 to i16
  %13 = load i16*, i16** @_rand48_seed, align 8
  %14 = getelementptr inbounds i16, i16* %13, i64 2
  store i16 %12, i16* %14, align 2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
